--- a/public/About.html
+++ b/public/About.html
@@ -11,6 +11,7 @@
 <body>
     <section class="section-navigation">
         <div class="header">
+            <img src="image/Group27.svg" alt="">
             <h1>WOODIES</h1>
 
         </div>
@@ -21,10 +22,18 @@
                 <li><a href="./Contact.html">How it works</a></li>
                 <li><a href="./cate.html">Categories</a></li>
                 <li><a href="./testimony.html">Testimony</a></li>
-                <li><a href="">SIGN UP</a></li>
-
+                <li><a class="singup" href="">SING UP</a></li>
             </ul>
         </div>
+    </section>
+    <section class="aboutUS">
+        <div class="div1-about">
+            <img src="image/Group28.svg" alt="">
+            <h3>Who we are</h3>
+            <p>_______________________________________________________________________</p>
+            <h1>ABOUT US</h1>
+        </div>
+
     </section>
 
 </body>
