--- a/public/cate.html
+++ b/public/cate.html
@@ -11,6 +11,7 @@
 <body>
     <section class="section-navigation">
         <div class="header">
+            <img src="image/Group27.svg" alt="">
             <h1>WOODIES</h1>
 
         </div>
@@ -21,7 +22,7 @@
                 <li><a href="./Contact.html">How it works</a></li>
                 <li><a href="./cate.html">Categories</a></li>
                 <li><a href="./testimony.html">Testimony</a></li>
-                <li><a href="">SIGN UP</a></li>
+                <li><a class="singup" href="">SING UP</a></li>
 
             </ul>
         </div>
