--- a/public/Home.html
+++ b/public/Home.html
@@ -24,11 +24,18 @@
                         <li><a href="./Contact.html">How it works</a></li>
                         <li><a href="./cate.html">Categories</a></li>
                         <li><a href="./testimony.html">Testimony</a></li>
-                        <li><a href="">SIGN UP</a></li>
+                        <li><a class="singup" href="">SING UP</a></li>
 
                     </ul>
                 </div>
             </section>
+            <div class="looking">
+                <p>Are you looking for <span> woodden furniture </span>for your place?</p>
+                <h1>This is the Right Place</h1>
+                <button>Explore Furniture</button>
+
+            </div>
+
         </header>
     </article>
 
